<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="BevasarlolistaHozzaadReceptbolViewModel"
            type="com.nmb.e_pantry.bevasarlolista.bevasarlolistahozzaadreceptbol.BevasarlolistaHozzaadReceptbolViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recept_til"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/recept_neve"
            android:paddingTop="5dp"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/recept_atv"
                android:layout_width="match_parent"
                android:layout_height="45dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/hianyzo_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

        <Button
            android:id="@+id/select_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kivalaszt"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/hozzaad_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hozzáad"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/bevlistaRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline3">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.14" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.53" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.62" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>